experiment 7 write up

--- a/_posts/2016-07-12-exp7-others.md
+++ b/_posts/2016-07-12-exp7-others.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 
+title: Experiment 7 
 date: 2016-07-12 0:00:00
 type: post
 published: true
 status: publish
 categories: []
 tags: []
-description: 
+description: A new improved version of experiment 6 
 # 110 marker 1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789
 twitter-body: you write here and it goes on the share for twitter
 featuredimg: polar-bear.jpg #if you put an image here it goes on twitter too
@@ -15,50 +15,32 @@ featuredimg: polar-bear.jpg #if you put an image here it goes on twitter too
 author: tiara
 ---
 
-Ben Wrote this morning:
-
-> if you doubled the BVN base station density, how would it be different? Would it be the same + some more or completely different? 
-> 
-
-### Answer 
-
-Annisa says: 
-The triangulation/centroid would be more accurate
-
 # Experiment 7
 
 Experiment 7 is just a modified version of experiment 6 but repeated and ran consistently. What we are looking for 
 Say we do this experiment and the pattern/shape of results are consistent, in the future how will we tell the system to look for a specific pattern or shape? We aren't sure yet, but this could help us with our next problem if we did, determining what is the closest BaseStation, as it would know roughly, that this is the signal the BS receives when it is closest to something. 
 
+![experiment 7]({{ site.baseurl }}/assets/exp7_setup.jpg) 
+
+![experiment 7 annisa]({{ site.baseurl }}/assets/exp7_setu_annisa.jpg) 
+
+# What we did with the data
+
 ### Exporting Terminal as a json
 
-I kknow this has been said ages ago but I thought it would be good to jsut include it anyway for any readers who havent seen it. a quick way to export the terminal as a json file is after the testble.py > output.json 
+I know this has been said ages ago but I thought it would be good to json include it anyway for any readers who haven't seen it. a quick way to export the terminal as a json file is after the testble.py > output.json 
 
-this will make a new json file in the same location as the testble.py file you are about to execute. It will take a few seconds to think but you will get a clean run of the info you need which will make life easier for plotting it into some graph producing thingy like matplotlib. 
+This will make a new json file in the same location as the testble.py file you are about to execute. It will take a few seconds to think but you will get a clean run of the info you need which will make life easier for plotting it into some graph producing thingy like matplotlib. 
 
-Deconstruction: http://matplotlib.org/ https://github.com/tuksun/BlankMindBlog/blob/gh-pages/helpers/experiments/ex6/raw_data/polar_exploration.ipynb
+### Results 
 
+Results are yet to come, probably be up tomorrow morning along side experiment 8(fingers crossed). We are just going through Ben's tutorial: http://matplotlib.org/ https://github.com/tuksun/BlankMindBlog/blob/gh-pages/helpers/experiments/ex6/raw_data/polar_exploration.ipynb
 
+as well as installing a few more processing tools like Anaconda and Canopy. 
 
-### Closest Base Station 
+### Downloads and instructions 
 
-We haven't really tackled the closest beacon problem yet, determining who's closest to what, what is next in turn and who is after that(the three closest BS in order). This is crucial for triangulation. 
+1. https://support.enthought.com/hc/en-us/articles/204470130-Using-enpkg-to-update-Canopy-EPD-packages?flash_digest=deba8a20b72f081b0bebdc8351a313fad98df8e2
 
-# Json file/ Ruby file 
-
-
-
-
-
-
-
-
-
-
-Checking the Boolean value of the Base Station 
-
-
-http://where-in.space/helpers/expreriments/ex6/raw_data/polar_exploration.html
-
-
+2. https://ipython.org/install.html
 
