experiment7 fixed wording and adding more content

--- a/_posts/2016-07-12-exp7-others.md
+++ b/_posts/2016-07-12-exp7-others.md
@@ -22,6 +22,8 @@ Say we do this experiment and the pattern/shape of results are consistent, in th
 
 ![experiment 7]({{ site.baseurl }}/assets/exp7_setup.jpg) 
 
+This diagram is pretty much the same as experiment 6 only we repeated the turns 4 times and with only 10 second intervals per 15 degrees(otherwsie it would have run for 40 minutes which is a long time to be standing). We also ran it continuoursly for 20 minutes, that is every turn took 4 minutes. Also we started by facing the 1m mark and tured in a clockwise direction.  
+
 ![experiment 7 annisa]({{ site.baseurl }}/assets/exp7_setu_annisa.jpg) 
 
 # What we did with the data
