--- a/_posts/2016-07-12-exp7-others.md
+++ b/_posts/2016-07-12-exp7-others.md
@@ -15,12 +15,12 @@ featuredimg: polar-bear.jpg #if you put an image here it goes on twitter too
 author: tiara
 ---
 
-# Experiment 7
+### Experiment 7
 
 Experiment 7 is just a modified version of experiment 6 but repeated and ran consistently. What we are looking for 
 Say we do this experiment and the pattern/shape of results are consistent, in the future how will we tell the system to look for a specific pattern or shape? We aren't sure yet, but this could help us with our next problem if we did, determining what is the closest BaseStation, as it would know roughly, that this is the signal the BS receives when it is closest to something. 
 
-![experiment 7]({{ site.baseurl }}/assets/exp7_setup.jpg) 
+![experiment 7]({{ site.baseurl }}/assets/exp7-setup.jpg) 
 
 This diagram is pretty much the same as experiment 6 only we repeated the turns 4 times and with only 10 second intervals per 15 degrees(otherwsie it would have run for 40 minutes which is a long time to be standing). We also ran it continuoursly for 20 minutes, that is every turn took 4 minutes. Also we started by facing the 1m mark and tured in a clockwise direction.  
 
