--- a/_posts/2016-07-12-exp7-others.md
+++ b/_posts/2016-07-12-exp7-others.md
@@ -30,15 +30,15 @@ This diagram is pretty much the same as experiment 6 only we repeated the turns 
 
 ### Exporting Terminal as a json
 
-I know this has been said ages ago but I thought it would be good to json include it anyway for any readers who haven't seen it. a quick way to export the terminal as a json file is after the *** testble.py > output.json ***. 
+I know this has been said ages ago but I thought it would be good to json include it anyway for any readers who haven't seen it. a quick way to export the terminal as a json file is after the <b>testble.py output.json </b>. 
 
-This will make a new json file in the same location as the testble.py file you are about to execute. It will take a few seconds to think but you will get a clean run of the info you need which will make life easier for plotting it into some graph producing thingy like *** matplotlib***. 
+This will make a new json file in the same location as the testble.py file you are about to execute. It will take a few seconds to think but you will get a clean run of the info you need which will make life easier for plotting it into some graph producing thingy like <b> matplotlib </b>. 
 
 ### Results 
 
 Results are yet to come, probably be up tomorrow morning along side experiment 8(fingers crossed). We are just going through Ben's tutorial: 
 
-*** http://matplotlib.org/ https://github.com/tuksun/BlankMindBlog/blob/gh-pages/helpers/experiments/ex6/raw_data/polar_exploration.ipynb *** 
+<b> http://matplotlib.org/ https://github.com/tuksun/BlankMindBlog/blob/gh-pages/helpers/experiments/ex6/raw_data/polar_exploration.ipynb </b> 
 
 as well as installing a few more processing tools like Anaconda and Canopy. 
 
