assets and ipynb

--- a/helpers/experiments/exp7/raw_json/ex7exploration.ipynb
+++ b/helpers/experiments/exp7/raw_json/ex7exploration.ipynb
@@ -37,7 +37,8 @@
    "source": [
     "data4 = pandas.read_json(\"fourmetre.json\")\n",
     "data3 = pandas.read_json(\"threemetre.json\")\n",
-    "data2 = pandas.read_json(\"twometre.json\")"
+    "data2 = pandas.read_json(\"twometre.json\")\n",
+    "data1 = pandas.read_json(\"onemeter.json\")"
    ]
   },
   {
@@ -141,7 +142,7 @@
     }
    ],
    "source": [
-    "data4.head()"
+    "data3.head()"
    ]
   },
   {
@@ -173,7 +174,7 @@
     }
    ],
    "source": [
-    "data4.rssi.hist()"
+    "data3.rssi.hist()"
    ]
   },
   {
@@ -190,7 +191,8 @@
     "\n",
     "data4[\"timestamp\"] = data4.apply (lambda row: convert_timestring(row), axis=1)\n",
     "data3[\"timestamp\"] = data3.apply (lambda row: convert_timestring(row), axis=1)\n",
-    "data2[\"timestamp\"] = data2.apply (lambda row: convert_timestring(row), axis=1)"
+    "data2[\"timestamp\"] = data2.apply (lambda row: convert_timestring(row), axis=1)\n",
+    "data1[\"timestamp\"] = data1.apply (lambda row: convert_timestring(row), axis=1)"
    ]
   },
   {
@@ -248,8 +250,8 @@
     }
    ],
    "source": [
-    "testRow = data4.iloc[[2]]\n",
-    "testRow"
+    "testRow = data3.iloc[[2]]\n",
+    "testRow3"
    ]
   },
   {
@@ -286,6 +288,7 @@
     "def addTime(row, timeoffset):\n",
     "    return row.timestamp + datetime.timedelta(minutes=timeoffset)\n",
     "\n",
+    "data1[\"rotated_time\"] = data1.apply (lambda row: addTime(row, 2), axis=1)\n",
     "data2[\"rotated_time\"] = data2.apply (lambda row: addTime(row, 1), axis=1)\n",
     "data3[\"rotated_time\"] = data3.apply (lambda row: addTime(row, 0), axis=1)\n",
     "data4[\"rotated_time\"] = data4.apply (lambda row: addTime(row, 3), axis=1)"
@@ -457,6 +460,7 @@
     "plt.plot_date(data4.rotated_time, data4.rssi, label='4m', alpha=0.5)\n",
     "plt.plot_date(data3.rotated_time, data3.rssi, label='3m', alpha=0.5)\n",
     "plt.plot_date(data2.rotated_time, data2.rssi, label='2m', alpha=0.5)\n",
+    "plt.plot_data(data1.rotated_time, data1.rssi, label='1m', alpha=0.5)\n",
     "plt.legend()\n",
     "plt.xlabel('Time')\n",
     "plt.ylabel('RSSI')\n",
