--- a/_posts/2016-08-21-topology.md
+++ b/_posts/2016-08-21-topology.md
@@ -26,5 +26,8 @@ These people are in the same set, and are topologically the same.
 
 ![something or other]({{ site.baseurl }}/assets/planking-in-a-tree.jpg)
 
-How this relates to the project is through comparison. If you can map the comparison topology, which means you have certain rules and parameters that guide a machine to look for specific characterticis(like a human interaction: closeness, timing, body position(facing forward)), then it makes it possible to use relatively simple data to deduce a human interaction...
+How this relates to the project is through comparison. If you can map the comparison topology, which means you have certain rules and parameters that guide a machine to look for specific characterticis(like a human interaction: closeness, timing, body position(facing forward)), then it makes it possible to use relatively simple data to deduce a human interaction...WHO would have thought!
+
+![something or other]({{ site.baseurl }}/assets/who would have thought.jpg)
+
 
